Add native support for Windows :tada:
As of cloudflare/workerd#452, `workerd` supports Windows' natively.
This change upgrades `workerd`, then removes the WSL and Docker
runtime shells. It also `Cherry`picks #509, to allow Miniflare
development on Windows too.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest] # `windows-latest` not yet supported
+        os: [ubuntu-latest, windows-latest]
         node: [16.13.0, latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
